Fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body {
     height: 100%;
     width: 100%;
     font-family: 'Patrick Hand SC', cursive;
+    overflow-x: hidden;
 }
 
 #bg {
